--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "main": "src/api/index.js",
     "scripts": {
-        "start": "vercel dev --yes",
+        "start": "node src/api/index.js",
         "dev": "nodemon --watch \"src/**\" --ext \"ts,js,json,mjs\" --exec \"npm start\"",
         "format": "prettier --write .",
         "lint": "eslint . --color --cache -f friendly --max-warnings 10"
